include $(top_srcdir)/Makefile.decl

ACLOCAL_AMFLAGS = -I m4

SUBDIRS=\
	protocol \
	engine \
	server \
	tests \
	demos

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 compile config.guess config.sub \
		       configure depcomp install-sh ltmain.sh missing \
		       mkinstalldirs

EXTRA_DIST+=Makefile.decl
